--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "discordbot",
+  "name": "discordbots",
   "version": "1.0.0",
-  "description": "teszt",
+  "description": "",
   "main": "index.js",
+  "dependencies": {
+    "discord.js": "^13.1.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "nodemon": "^2.0.12",
+    "request": "^2.88.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "BaranyG",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^12.5.3",
-    "discord.js-master": "^13.0.2-dev",
-    "fs": "0.0.1-security",
-    "mongodb": "^4.1.1",
-    "request": "^2.88.2"
-  }
+  "author": "BlessBarany",
+  "license": "ISC"
 }
