--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "discordbots",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "dependencies": {
-    "discord.js": "^13.1.0",
-    "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "http": "0.0.1-security",
-    "nodemon": "^2.0.12",
-    "request": "^2.88.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "BlessBarany",
-  "license": "ISC"
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
+    "discord.js": "^14.11.0",
+    "express": "^4.18.2",
+    "ffmpeg-static": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "libsodium-wrappers": "^0.7.11",
+    "opusscript": "^0.0.8",
+    "request": "^2.88.2",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.5",
+    "ytdl-core-discord": "^1.3.1"
+  }
 }
